--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </ul>
                   </li>
                   <li>
-                    <a title="" href="/pages/underConstruction.html"
+                    <a title="" href="/pages/transparencia.html"
                       >Transparencia</a
                     >
                   </li>
