--- a/pages/historia.html
+++ b/pages/historia.html
@@ -26,7 +26,7 @@
     <!--Styles-->
     <link rel="stylesheet" href="/style/style.css" />
     <!--Site Name-->
-    <title>Patagones Municipio</title>
+    <title>Historia - Patagones Municipio</title>
   </head>
 
   <body>
@@ -119,6 +119,31 @@
                   >Periodos Históricos</a
                 >
               </li>
+              <li class="has-sub">
+                <a title="" href="#">Un Poco de Historia...</a>
+                <ul>
+                  <li>
+                    <a title="" href="#combatePatagones" onclick="verHistoria()"
+                      >El combate de Patagones</a
+                    >
+                  </li>
+                  <li>
+                    <a title="" href="#">Escudo de Armas</a>
+                  </li>
+                  <li>
+                    <a title="" href="#">Himno a Carmen de Patagones</a>
+                  </li>
+                  <li>
+                    <a title="" href="#">Poblado Histórico Nacional</a>
+                  </li>
+                  <li>
+                    <a title="" href="#"
+                      >Primeros Pobladores "Europeos Maragatos"</a
+                    >
+                  </li>
+                </ul>
+              </li>
+
               <li class="has-sub">
                 <a title="" href="#">Museos</a>
                 <ul>
@@ -255,6 +280,205 @@
             actividades que se hallan en el lugar. Es Monumento Histórico
             Nacional.
           </p>
+        </section>
+        <section id="unPocoDeHistoria">
+          <!--Seccion dedicada a la historia de la ciudad de Patagones / Su escudo / etc.-->
+          <div class="education" id="combatePatagones">
+            <h1>El combate de Patagones</h1>
+            <br />
+            <h3>Antecedentes del conflicto</h3>
+            <br />
+            La guerra Argentino-brasileña fue el último acto de un antiguo
+            conflicto entre España y Portugal que se remontaba al siglo XVI por
+            la posesión de los actuales territorios de la República Oriental del
+            Uruguay y parte del estado de Río Grande do Sul en el Brasil.
+            Distintas bulas papales y tratados procuraron zanjar sus diferencias
+            sin lograr frenar las hostilidades. En 1680 los portugueses fundaron
+            Colonia del Sacramento la cual fue destruida en 1777 por el Rey
+            Carlos III y paralelamente la creación del Virreinato del Río de la
+            Plata como forma de salvaguardar los intereses de España en los
+            territorios rioplatenses. <br /><br />
+
+            En 1821 Juan VI de Portugal incorporó la Provincia Oriental con el
+            nombre de Cisplatina y la opinión pública en Buenos Aires y el
+            litoral exigía la recuperación del territorio ocupado. Así en abril
+            de 1825 se originó la expedición de los Treinta y Tres Orientales al
+            mando de Lavalleja logrando acorralar a los brasileños y recuperar
+            la Banda Oriental. <br /><br />
+
+            A raíz del bloqueo del puerto de Buenos Aires por la escuadra
+            imperial, el apostadero naval rionegrino se había transformado en el
+            seguro refugio de nuestros corsarios que atacaban valientemente el
+            poderío naval enemigo. <br /><br />
+
+            El bloqueo del puerto de Buenos Aires obligó a los corsarios a tomar
+            el puerto de Patagones como base de sus operaciones y Brasil, herido
+            en sus intereses, montó una expedición compuesta por cuatro
+            embarcaciones con 52 piezas de artillería y 613 soldados para
+            someter a los corsarios aquí refugiados, recuperar sus presas y, al
+            menos en forma temporaria, tener el control de la población.
+            <br /><br />
+
+            <h3>La guerra llega a Patagones - La Invasion Imperial</h3>
+            <br />
+
+            Carmen de Patagones era hacia 1827 una aldea de alrededor de
+            ochocientos habitantes integrada por los primeros pobladores
+            hispanos, sus descendientes, extranjeros, las tropas y empleados del
+            fuerte, morenos, gauchos deportados desde el Río de la Plata y el
+            complejo panorama social se completaba con los indios tehuelches,
+            pampas y araucanos. Atrás había quedado los años más difíciles
+            logrando una relativa prosperidad gracias a la incidencia que tuvo
+            la economía de los saladeros en la expansión económica que atrajo a
+            agricultores, ganaderos, comerciantes y capitales. <br />
+            <br />
+
+            <img
+              src="/assets/combate_patagones.jpg"
+              alt="El Combate de Patagones"
+              style="float: left; margin: 1%"
+            />
+            <br />
+
+            En 1826 el Comandante Militar de Patagones Martín Lacarra recibió
+            dos malas noticias: la inminencia de la invasión brasileña y la
+            imposibilidad del gobierno central de enviar refuerzos militares;
+            entonces hubo que frenar las apetencias extranjeras con los escasos
+            recursos militares que contaba el fuerte, los mismos corsarios
+            Harris, Soulin y Dautant y sus tripulaciones, bajo las órdenes del
+            comandante Santiago Bynon y los chacareros, hacendados, peones,
+            artesanos, comerciantes y morenos africanos. <br /><br />
+
+            Las acciones comenzaron a las 9 de la mañana del 28 de febrero; la
+            infantería de negros del coronel Pereyra abrió fuego de cañón y
+            metralla contra el bergantín "Escudero" y detrás de este ingresó la
+            corbeta, "Itaparica", que traspasó la línea de la defensa sin
+            dificultades porque ya no quedaban municiones para atender la
+            batería ni existían otros medios para enfrentar la agresión.
+            <br /><br />
+
+            Sobre el mediodía, la "Duqueza de Goyas" intentó franquear la
+            desembocadura pero quedó varada en los bancos impidiendo el
+            desplazamiento de la cuarta nave la "Constancia" que avanzaba
+            detrás. A esta altura de los hechos y sin posibilidades de trabar
+            combate con los invasores, la infantería se replegó en dirección al
+            fuerte junto a los corsarios de los comandantes Harris, Dautant y
+            Soulin y a los hombres del gaucho Molina. Dos negros y el corsario
+            Fiori, de origen Italiano, murieron durante estas acciones.
+            <br /><br />
+
+            La suerte de la "Duquesa de Goyaz", que había varado era
+            irremediable pues el oleaje la estaba demoliendo. A su vez, la
+            "Itaparica" presentaba una encalladura en el estacionario. La
+            precaria situación de la flota imperial determinó que se decidiera
+            armar a las goletas "Chiquiña", "Emperatriz", "Bella Flor" y
+            "Oriental Argentino". <br /><br />
+
+            Luego de permanecer un día en alta mar, la "Constancia" logró
+            atravesar la barra con los sobrevivientes de la "Duquesa de Goyaz".
+            Sobrepasada en su tonelaje y con el peligro de varar en el estuario,
+            su comandante decidió un desembarco en inmediaciones de lo que hoy
+            se conoce como el "Pescadero" para aligerar su carga y redistribuir
+            a los náufragos en el resto de las naves, pero un grupo de
+            milicianos que tenían la misión de custodiar la margen sur los
+            sorprendió dejando abandonados sus mochilas y botes. <br /><br />
+
+            Patagones, pese a los días que ya habían transcurrido desde que la
+            Escuadra Imperial había hecho su aparición en la desembocadura, no
+            terminaba de adoptar un plan para hacerles frente. <br /><br />
+
+            El 5 de marzo se decidió convocar un Consejo de Guerra con el
+            propósito de establecer un curso de acción definitivo. La Escuadra,
+            reducida a la mitad de su poder original por el hundimiento de la
+            "Duquesa de Goyaz" y el encallamiento de la "Itaparica", se había
+            adelantado hasta la Estancia de Rial para aprovisionarse de víveres.
+            Esta situación favorecía un ataque con los barcos corsarios aunque,
+            de acuerdo con la opinión del práctico Guillermo White, la operación
+            presentaba muchas dificultades por las características del río
+            Negro. <br /><br />
+
+            Al tiempo que se cumplían distintas tareas en el Fuerte para
+            protegerse de un posible ataque de la infantería brasileña y tomaban
+            posiciones en el lugar los negros libertos del coronel Pereyra, la
+            caballería, integrada por vecinos armados y los 22 "tragas" del
+            gaucho Molina, eran adelantados a Laguna Grande - bajo las órdenes
+            del subteniente Olivera -, con la misión de determinar la ubicación
+            del enemigo y el posible escenario desde donde podrían consumar un
+            desembarco. <br /><br />
+
+            Alrededor de la diez de la noche del 6 de marzo, el Comandante de la
+            expedición brasileña James Shepherd, ordenó descender a tierra los
+            400 hombres de infantería y avanzar durante toda la noche para
+            sorprender a Patagones con las primeras luces del 7 de Marzo.
+            <br /><br />
+
+            <h3>El dia decisivo - 7 de Marzo</h3>
+            <br />
+
+            En la madrugada del 7 de marzo la infantería emprendió una marcha de
+            veinte kilómetros conducida por un negro que había vivido un tiempo
+            en Patagones, poco hábil para eludir las cortadas y barrancas del
+            río convirtió la travesía en penosa y extenuante. <br /><br />
+
+            A las 6:30 horas alcanzaron el cerro de la Caballada y comenzaron de
+            inmediato a ser fogueados por las naves republicanas "Bella Flor"
+            comandada por Bynon, el "Oriental Argentino" a cargo de Dautant, la
+            "Emperatriz" por Jaime Harris y la goleta "Chiquiña" con Juan Soulin
+            obligándolos a efectuar un repliegue para evitar los proyectiles.
+            Pero además tenían a su vista un centenar de vecinos alistados por
+            el subteniente Olivera, 43 veteranos de la guarnición, 10 hombres de
+            Felipe Pereyra y los gauchos de Molina. De fondo el fuerte con las
+            mujeres y ancianos vestidos con los gorros rojos simulando ser una
+            fuerza de reserva. <br /><br />
+
+            Las fuerzas terrestres de la patria descargaron sus fusiles e
+            hirieron de muerte al capitán Shepherd. Desorientados y dominados
+            por la fatiga, la columna enemiga comenzó a retroceder buscando el
+            río, pero la caballería de Olivera la arrolló encerrándola entre el
+            río y el monte, envuelto en llamas por la astucia de Molina.
+            <br /><br />
+
+            A poco de iniciado el combate las naves salieron aguas abajo y hacia
+            alrededor de las 11 hs. se había logrado la rendición de la
+            "Escudero" y la "Constancia". Mientras tanto los infantes brasileños
+            eran perseguidos por las tropas de Olivera quienes al enterarse de
+            la rendición de sus buques hacen también lo mismo. Ya en horas de la
+            tarde sólo faltaba la "Itaparica", Bynon desplegó sus naves
+            alrededor de la corbeta varada y se rindió sin dar pelea. El Oficial
+            Juan Bautista Thorne descendió el pabellón de guerra brasileño.
+            <br /><br />
+
+            <h3>Fin de la Guerra Argentino-Brasileña</h3>
+            <br />
+
+            Inicialmente la posición del Imperio fue más ventajosa pero una
+            serie de victorias obtenidas por las armas rioplatenses como en
+            Juncal el 9 de febrero de 1827, Bacacay el 13 de febrero de 1827, la
+            batalla de Ombú tres días después, Ituizangó el 20 de febrero, el 7
+            de marzo en Patagones, constituyeron un triunfo virtual y un
+            desequilibrio de la posición del Imperio, pero la falta de recursos
+            impidió una definición de la contienda por la vía militar por lo que
+            se apeló a la instancia diplomática. <br /><br />
+
+            La misión de Tomás Guido y Juan Ramón Balcarce a Río de Janeiro dio
+            como resultado la firma del acuerdo de paz en septiembre de 1828
+            reconociendo y garantizando la independencia de la Banda Oriental.
+            <br /><br />
+
+            <h2>Fuentes Consultadas</h2>
+            <br />
+            <ul>
+              <li>
+                Bustos, Jorge / Irusta,Jorge - El combate de Patagones.
+                Ediciones Artesanales "La Lampara" - Carmen de Patagones (2005)
+              </li>
+              <li>
+                García Enciso, Isaías - "La Gesta de Patagones". Editoriales
+                Congreso de la Nación, Buenos Aires (1968)
+              </li>
+            </ul>
+            <br />
+          </div>
         </section>
         <section id="museos">
           <!--Seccion dedicada al contenido de los distintos museos-->
