--- a/pages/localidades.html
+++ b/pages/localidades.html
@@ -39,7 +39,7 @@
     <!--Framework para el manejo de Mapas-->
     <link rel="stylesheet" href="../style/style.css" />
     <!--Site Name-->
-    <title>Patagones Municipio</title>
+    <title>Localidades - Patagones Municipio</title>
   </head>
 
   <body>
