--- a/pages/educacion.html
+++ b/pages/educacion.html
@@ -26,7 +26,7 @@
     <!--Styles-->
     <link rel="stylesheet" href="/style/style.css" />
     <!--Site Name-->
-    <title>Patagones Municipio</title>
+    <title>Educación - Patagones Municipio</title>
   </head>
 
   <body>
