--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                     <a title="" href="#">Areas de Gobierno</a>
                     <ul>
                       <li>
-                        <a title="" href="#"
+                        <a title="" href="/pages/underConstruction.html"
                           >Agencia de Recaudación Municipal</a
                         >
                       </li>
-                      <li><a title="" href="#">Ceremonial y Protocolo</a></li>
+                      <li><a title="" href="/pages/underConstruction.html">Ceremonial y Protocolo</a></li>
                       <li><a title="" href="#">Prensa</a></li>
                       <li><a title="" href="#">Recursos Humanos</a></li>
                     </ul>
