--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             ><img src="/assets/icons8-instagram-48.png" alt="Icono Instagram"
           /></a>
         </div>
-        <hr />
+        <hr width="920px"/>
         <!--Barra de separación-->
       </div>
     </header>
@@ -156,7 +156,7 @@
                 src="/assets/banner_becas_2023.png"
                 alt="Becas Terciarias y Universitarias - Descarga de Planilla"
             /></a>
-            <a href="https://patagones.gob.ar/oficina-virtual-arm"
+            <a href="/pages/apps_Frontend/appARM.html"
               ><img
                 src="/assets/arm-ov-logo-accesso.png"
                 alt="Oficina Virtual - ARM"
