--- a/pages/apps_Frontend/appARM.html
+++ b/pages/apps_Frontend/appARM.html
@@ -28,25 +28,174 @@
     <!--Styles-->
     <link rel="stylesheet" href="/style/apps_Style/styleApps.css" />
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <!--Site Name-->
     <title>Oficina Virtual - Agencia Recaudación Municipal</title>
   </head>
-  <body class="animate__animated animate__slideInDown">
+
+  <body>
     <header>
-        <h1>Oficina Virtual - Agencia Recaudación Municipal</h1>
+      <h2>Oficina Virtual - Agencia Recaudación Municipal</h2>
     </header>
 
     <main>
-        <div class="principalHome">
-            <img src="/assets/appARM.jpg" alt="Imagen de Impuestos">
-            <section class="login">
-                
-            </section>
+      <div id="ingreso">
+        <div class="form-container" tabindex="0">
+          <div class="form-container__block">
+            <div class="form-container__header">
+              <p>Ingrese con su cuenta</p>
+              <form class="form-container__form">
+                <input placeholder="Email" type="email" />
+                <input placeholder="Contraseña" type="password" />
+                <div class="form-container__register-buttons">
+                  <button class="form-container__sign">Ingresar</button>
+                  <a
+                    class="form-container__sign forgot"
+                    href="#"
+                    onclick="verSeccion(0)"
+                    >Registro</a
+                  >
+                  <a class="form-container__sign forgot" href="#"
+                    >Restablecer Contraseña</a
+                  >
+                </div>
+              </form>
+            </div>
+            <div class="form-container__footer">
+              <p class="top-line">O ingrese con:</p>
+              <div class="form-container__sign-app-buttons">
+                <button class="google">
+                  <svg
+                    class=""
+                    xml:space="preserve"
+                    style="enable-background: new 0 0 512 512"
+                    viewBox="0 0 512 512"
+                    y="0"
+                    x="0"
+                    height="512"
+                    width="512"
+                    xmlns:xlink="http://www.w3.org/1999/xlink"
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <g>
+                      <path
+                        data-original="#167ee6"
+                        fill="#167ee6"
+                        d="m492.668 211.489-208.84-.01c-9.222 0-16.697 7.474-16.697 16.696v66.715c0 9.22 7.475 16.696 16.696 16.696h117.606c-12.878 33.421-36.914 61.41-67.58 79.194L384 477.589c80.442-46.523 128-128.152 128-219.53 0-13.011-.959-22.312-2.877-32.785-1.458-7.957-8.366-13.785-16.455-13.785z"
+                      ></path>
+                      <path
+                        data-original="#12b347"
+                        fill="#12b347"
+                        d="M256 411.826c-57.554 0-107.798-31.446-134.783-77.979l-86.806 50.034C78.586 460.443 161.34 512 256 512c46.437 0 90.254-12.503 128-34.292v-.119l-50.147-86.81c-22.938 13.304-49.482 21.047-77.853 21.047z"
+                      ></path>
+                      <path
+                        data-original="#0f993e"
+                        fill="#0f993e"
+                        d="M384 477.708v-.119l-50.147-86.81c-22.938 13.303-49.48 21.047-77.853 21.047V512c46.437 0 90.256-12.503 128-34.292z"
+                      ></path>
+                      <path
+                        class=""
+                        data-original="#ffd500"
+                        fill="#ffd500"
+                        d="M100.174 256c0-28.369 7.742-54.91 21.043-77.847l-86.806-50.034C12.502 165.746 0 209.444 0 256s12.502 90.254 34.411 127.881l86.806-50.034c-13.301-22.937-21.043-49.478-21.043-77.847z"
+                      ></path>
+                      <path
+                        class=""
+                        data-original="#ff4b26"
+                        fill="#ff4b26"
+                        d="M256 100.174c37.531 0 72.005 13.336 98.932 35.519 6.643 5.472 16.298 5.077 22.383-1.008l47.27-47.27c6.904-6.904 6.412-18.205-.963-24.603C378.507 23.673 319.807 0 256 0 161.34 0 78.586 51.557 34.411 128.119l86.806 50.034c26.985-46.533 77.229-77.979 134.783-77.979z"
+                      ></path>
+                      <path
+                        data-original="#d93f21"
+                        fill="#d93f21"
+                        d="M354.932 135.693c6.643 5.472 16.299 5.077 22.383-1.008l47.27-47.27c6.903-6.904 6.411-18.205-.963-24.603C378.507 23.672 319.807 0 256 0v100.174c37.53 0 72.005 13.336 98.932 35.519z"
+                      ></path>
+                    </g></svg
+                  ><span>Google</span>
+                </button>
+                <button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="#0084ff"
+                  >
+                    <path
+                      d="M22.5 0c.83 0 1.5.67 1.5 1.5v21c0 .83-.67 1.5-1.5 1.5h-6v-9h3l.75-3.75H16.5v-1.5c0-1.5.75-2.25 2.25-2.25h1.5V3.75h-3c-2.76 0-4.5 2.16-4.5 5.25v2.25h-3V15h3v9H1.5A1.5 1.5 0 0 1 0 22.5v-21C0 .67.67 0 1.5 0h21z"
+                    />
+                  </svg>
+                </button>
+                <button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="#ff0015"
+                  >
+                    <path
+                      d="M16.98 0a6.9 6.9 0 0 1 5.08 1.98A6.94 6.94 0 0 1 24 7.02v9.96c0 2.08-.68 3.87-1.98 5.13A7.14 7.14 0 0 1 16.94 24H7.06a7.06 7.06 0 0 1-5.03-1.89A6.96 6.96 0 0 1 0 16.94V7.02C0 2.8 2.8 0 7.02 0h9.96zm.05 2.23H7.06c-1.45 0-2.7.43-3.53 1.25a4.82 4.82 0 0 0-1.3 3.54v9.92c0 1.5.43 2.7 1.3 3.58a5 5 0 0 0 3.53 1.25h9.88a5 5 0 0 0 3.53-1.25 4.73 4.73 0 0 0 1.4-3.54V7.02a5 5 0 0 0-1.3-3.49 4.82 4.82 0 0 0-3.54-1.3zM12 5.76c3.39 0 6.2 2.8 6.2 6.2a6.2 6.2 0 0 1-12.4 0 6.2 6.2 0 0 1 6.2-6.2zm0 2.22a3.99 3.99 0 0 0-3.97 3.97A3.99 3.99 0 0 0 12 15.92a3.99 3.99 0 0 0 3.97-3.97A3.99 3.99 0 0 0 12 7.98zm6.44-3.77a1.4 1.4 0 1 1 0 2.8 1.4 1.4 0 0 1 0-2.8z"
+                    />
+                  </svg>
+                </button>
+                <button>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="#53b6ff"
+                  >
+                    <path
+                      d="M20 0a4 4 0 0 1 4 4v16a4 4 0 0 1-4 4H4a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4h16zm-4.42 5.8a3.28 3.28 0 0 0-3.2 4.03A9.32 9.32 0 0 1 5.61 6.4a3.26 3.26 0 0 0 1.02 4.38 3.27 3.27 0 0 1-1.49-.4v.03a3.28 3.28 0 0 0 2.64 3.22 3.3 3.3 0 0 1-1.49.06 3.29 3.29 0 0 0 3.07 2.28 6.59 6.59 0 0 1-4.86 1.36 9.29 9.29 0 0 0 5.03 1.47c6.04 0 9.34-5 9.34-9.34v-.42a6.65 6.65 0 0 0 1.63-1.7c-.59.26-1.22.44-1.89.52.68-.41 1.2-1.05 1.45-1.82-.64.38-1.34.65-2.09.8a3.28 3.28 0 0 0-2.4-1.04z"
+                    />
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
-
+      </div>
+      <div id="registro">
+        <form class="form">
+          <p class="title">Registro</p>
+          <p class="message">Registrese y tenga acceso total a nuestra App.</p>
+          <div class="flex">
+            <label>
+              <input required="" placeholder="" type="text" class="input" />
+              <span>Nombre</span>
+            </label>
+            <label>
+              <input required="" placeholder="" type="text" class="input" />
+              <span>Apellido</span>
+            </label>
+          </div>
+          <label>
+            <input required="" placeholder="" type="email" class="input" />
+            <span>Email</span>
+          </label>
+          <label>
+            <input required="" placeholder="" type="password" class="input" />
+            <span>Contraseña</span>
+          </label>
+          <label>
+            <input required="" placeholder="" type="password" class="input" />
+            <span>Confirme contraseña</span>
+          </label>
+          <button class="submit">Enviar</button>
+          <p class="signin">
+            Ya tiene cuenta? <a href="" onclick="verSeccion(1)">Ingrese</a>
+          </p>
+        </form>
+      </div>
+      <script
+        type="text/javascript"
+        src="/js/apps_Javascript/manejoDisplayApps.js"
+      ></script>
     </main>
 
     <footer>
