--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
                 alt="Becas Terciarias y Universitarias - Descarga de Planilla"
             /></a>
             <a href="/pages/apps_Frontend/appARM.html"
-              ><img
+              target="_blank"><img
                 src="/assets/arm-ov-logo-accesso.png"
                 alt="Oficina Virtual - ARM"
             /></a>
-            <a href="https://patagones.oficinavirtual.live/"
+            <a href="/pages/apps_Frontend/appRRHH.html"
               ><img
                 src="/assets/rrhh-accesso-oficina-virtual.png"
                 alt="Enlace oficina Virtual"
@@ -392,7 +392,7 @@
 
     <footer>
       <!--Pie de Sitio-->
-      <p>&copy2023 All Right Reserved - Municipalidad de Patagones ||</p>
+      <p>&copy2023 Municipalidad de Patagones ||</p>
       <p class="devs">Design & developed by</p>
       <img
         src="/assets/logo-no-background.png"
