--- a/pages/apps_Frontend/appARM_Home.html
+++ b/pages/apps_Frontend/appARM_Home.html
@@ -38,10 +38,20 @@
   <body>
     <header>
       <h2>Oficina Virtual - Agencia Recaudación Municipal</h2>
+      <div class="nav">
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <div class="menu">
+          <li><a href="#">Perfil</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#" id="acercaDe">Acerca De</a></li>
+          <li><a href="/pages/apps_Frontend/appARM.html">Logout</a></li>
+        </div>
+      </div>
     </header>
 
     <main>
-      
       <div id="opciones">
         <div class="cards">
           <div class="card red">
