--- a/pages/apps_Frontend/appARM_Home.html
+++ b/pages/apps_Frontend/appARM_Home.html
@@ -43,10 +43,10 @@
         <span></span>
         <span></span>
         <div class="menu">
-          <li><a href="#">Perfil</a></li>
-          <li><a href="#">Contacto</a></li>
-          <li><a href="#" id="acercaDe">Acerca De</a></li>
-          <li><a href="/pages/apps_Frontend/appARM.html">Logout</a></li>
+          <li><a href="#" title="Ver/Modificar perfil">Perfil</a></li>
+          <li><a href="#" title="Contáctenos">Contacto</a></li>
+          <li><a href="#" title="Oficina Virtual - v1.01" id="acercaDe">Acerca De</a></li>
+          <li><a href="/pages/apps_Frontend/appARM.html" title="Salir">Logout</a></li>
         </div>
       </div>
     </header>
