--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Core Meta Data -->
     <meta content="HollowDevs" name="author" />
     <meta
-      content="Sitio del Municipio del partido de Patagones"
+      content="Sitio del Municipio del Partido de Patagones"
       name="Municipio Patagones"
     />
     <meta
@@ -52,7 +52,7 @@
             ><img src="/assets/icons8-instagram-48.png" alt="Icono Instagram"
           /></a>
         </div>
-        <hr width="920px"/>
+        <hr width="920px" />
         <!--Barra de separación-->
       </div>
     </header>
@@ -74,14 +74,10 @@
                     >
                     <ul>
                       <li>
-                        <a title="" href="/pages/educacion.html"
-                          >Educación</a
-                        >
+                        <a title="" href="/pages/educacion.html">Educación</a>
                       </li>
                       <li>
-                        <a title="" href="/pages/historia.html"
-                          >Historia</a
-                        >
+                        <a title="" href="/pages/historia.html">Historia</a>
                       </li>
                       <li>
                         <a title="" href="/pages/localidades.html"
@@ -99,7 +95,11 @@
                           >Agencia de Recaudación Municipal</a
                         >
                       </li>
-                      <li><a title="" href="/pages/underConstruction.html">Ceremonial y Protocolo</a></li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Ceremonial y Protocolo</a
+                        >
+                      </li>
                       <li><a title="" href="#">Prensa</a></li>
                       <li><a title="" href="#">Recursos Humanos</a></li>
                     </ul>
@@ -120,7 +120,7 @@
             <!--Desplegable leyenda intendente-->
             <ul>
               <li class="has-sub">
-                <a title="fotoIntendente" href="#"
+                <a title="Jose Luis Zara" href="#"
                   ><img
                     src="/assets/jose_luis_zara_0.jpg"
                     alt="Foto Intendente Jose Luis Zara"
@@ -156,12 +156,12 @@
                 src="/assets/banner_becas_2023.png"
                 alt="Becas Terciarias y Universitarias - Descarga de Planilla"
             /></a>
-            <a href="/pages/apps_Frontend/appARM.html"
-              target="_blank"><img
+            <a href="/pages/apps_Frontend/appARM.html" target="_blank"
+              ><img
                 src="/assets/arm-ov-logo-accesso.png"
                 alt="Oficina Virtual - ARM"
             /></a>
-            <a href="/pages/apps_Frontend/appRRHH.html"
+            <a href="/pages/apps_Frontend/appRRHH.html" target="_blank"
               ><img
                 src="/assets/rrhh-accesso-oficina-virtual.png"
                 alt="Enlace oficina Virtual"
@@ -378,7 +378,7 @@
                 name="mensaje"
                 cols="34"
                 rows="10"
-                style="resize:none"
+                style="resize: none"
                 placeholder="Mensaje / Consulta"
                 required
               ></textarea>
