--- a/index.html
+++ b/index.html
@@ -69,6 +69,93 @@
                 <a title="" href="#">Menú</a>
                 <ul>
                   <li class="has-sub">
+                    <a title="" href="#">Areas de Gobierno</a>
+                    <ul>
+                      <li>
+                        <a title="" href="/pages/areasGobierno/arm.html"
+                          >Agencia de Recaudación Municipal</a
+                        >
+                      </li>
+                      <li>
+                        <a
+                          title=""
+                          href="/pages/areasGobierno/ceremonialProtocolo.html"
+                          >Ceremonial y Protocolo</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Consejo Discapacidad</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/areasGobierno/cultura.html"
+                          >Cultura</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Defensa Civil</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Delegaciones</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Desarrollo Social</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Desarrollo Territorial</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Intendencia</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/areasGobierno/jefaturaDeGabinete.html"
+                          >Jefatura de Gabinete y Coordinación Municipal</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >OMIC</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Prensa</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Recursos Humanos</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/areasGobierno/subsecretariaSalud.html"
+                          >Subsecretaria de Salud</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Subsecretaria de Seguridad</a
+                        >
+                      </li>
+                      <li>
+                        <a title="" href="/pages/underConstruction.html"
+                          >Turismo</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="has-sub">
                     <a title="" href="#elPartido" onclick="pageChanger()"
                       >El Partido</a
                     >
@@ -87,29 +174,12 @@
                     </ul>
                   </li>
 
-                  <li class="has-sub">
-                    <a title="" href="#">Areas de Gobierno</a>
-                    <ul>
-                      <li>
-                        <a title="" href="/pages/areasGobierno/arm.html"
-                          >Agencia de Recaudación Municipal</a
-                        >
-                      </li>
-                      <li>
-                        <a title="" href="/pages/underConstruction.html"
-                          >Ceremonial y Protocolo</a
-                        >
-                      </li>
-                      <li><a title="" href="#">Prensa</a></li>
-                      <li><a title="" href="#">Recursos Humanos</a></li>
-                    </ul>
-                  </li>
+                  <li><a title="" href="/pages/noticias.html">Noticias</a></li>
                   <li>
                     <a title="" href="/pages/transparencia.html"
                       >Transparencia</a
                     >
                   </li>
-                  <li><a title="" href="/pages/noticias.html">Noticias</a></li>
                 </ul>
               </li>
               <li class="has-sub"><a title="" href="#contacto">Contacto</a></li>
@@ -299,7 +369,7 @@
 
       <section class="social_rss">
         <!--Redes RSS-->
-        <iframe
+       <!-- <iframe
           width="560"
           height="315"
           src="https://www.youtube.com/embed/kn_J5IQHqt0"
@@ -307,7 +377,7 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
-        ></iframe>
+        ></iframe>-->
       </section>
 
       <section class="contacto" id="contacto">
@@ -362,15 +432,29 @@
                 <option value="arm">
                   Agencia de Recaudación Municipal - ARM
                 </option>
+                <option value="discapacidad">Concejo de Discapacidad</option>
+                <option value="defensaCivil">Defensa Civil</option>
+                <option value="delegacionSanBlas">Delegación Bahia San Blas</option>
+                <option value="delegacionCagliero">
+                  Delegación Cardenal Cagliero
+                </option>
+                <option value="delegacionPradere">Delegación Juan A. Pradere</option>
+                <option value="delegacionStroeder">Delegación Stroeder</option>
+                <option value="deVillalonga">Delegación Villalonga</option>
+                <option value="Desarrollo Social">Desarrollo Social</option>
                 <option value="ceremonial">
                   Dirección de Ceremonial y Protocolo
                 </option>
-                <option value="discapacidad">Concejo de Discapacidad</option>
                 <option value="cultura">Dirección de Cultura</option>
-                <option value="defensaCivil">Defensa Civil</option>
-                <option value="Desarrollo Social">Desarrollo Social</option>
+                <option value="prensa">Dirección de Prensa</option>
                 <option value="turismo">Dirección de Turismo</option>
+                <option value="intendencia">Intendencia</option>
+                <option value="jefatura">
+                  Jefatura de Gabinete y Coordinación Municipal
+                </option>
                 <option value="omic">OMIC</option>
+                <option value="salud">Subsecretaria de Salud</option>
+                <option value="seguridad">Subsecretaria de Seguridad</option>
               </select>
               <br />
               <br />
